--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "STISKILLI",
   "short_name": "STISKILLI",
-  "start_url": "/GovtExam/?allow=stiskilli",
+  "start_url": "/GovtExam/index.html?allow=stiskilli",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0d6efd",
